# cpp-project-template

./: CMakeLists.txt  README.md  build
include/: Class.h
scripts/: bootstrap.py
src/: CMakeLists.txt  Class.cpp  main.cpp
